#483 closed bug (fixed)
Not possible to boot
Reported by: | Owned by: | axeld | |
---|---|---|---|
Priority: | blocker | Milestone: | R1 |
Component: | System/Kernel | Version: | |
Keywords: | Cc: | diver | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
Summary: KDL is entered after the Haiku boot logo has appeared when trying to boot with rev17128.
Test description:
- Update to rev17128 using "svn update".
- Created an image using "jam haiku-image".
- Mount the image using Mount Image.
- Copy the files from the image to the Haiku partition.
- Reboot.
Now the Haiku logo appears, but then KDL is entered with the message: "PANIC: could not mount boot device!"
When I did "bt" it showed that it was thread 0x6 "main2" which had crashed.
Test setup: Haiku partition: rev17128
Change History (7)
comment:1 by , 19 years ago
Cc: | added |
---|
comment:2 by , 19 years ago
comment:4 by , 19 years ago
Confirmed that hrev17127 fails on real hardware.
Reverting vfs.cpp to version prior to 17128 resolves issue.
comment:5 by , 19 years ago
Status: | new → closed |
---|
comment:6 by , 19 years ago
Resolution: | → fixed |
---|
Note:
See TracTickets
for help on using tickets.
Had to revert change 17127 to avoid this problem on real hardware. Don't happen with Virtual PC.