Fixed bug #483: * vfs_get_fs_node_from_path() now also work for absolute paths again (but   still for relative ones from the volume root) - it just tests if the   mount IDs fit, so it only returns successful if the path really is on   the desired mount. * the Disk Device Manager publish functions now call devfs_publish_*()   correctly (by omitting the "/dev/" mount point). * devfs_publish_partition() now accepts absolute device paths but relative   partition paths.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17138 a95241bf-73f2-0310-859d-f6bbb57e9c96