src/system/kernel/fs/vfs.cpp
@@ -2759,9 +2759,14 @@ vfs_get_fs_node_from_path(mount_id mountID, const char *path, bool kernel, void 
 	strlcpy(buffer, path, pathBuffer.BufferSize());
 
 	struct vnode *vnode = mount->root_vnode;
-	inc_vnode_ref_count(vnode);
 
-	status = vnode_path_to_vnode(vnode, buffer, true, 0, &vnode, NULL, NULL);
+	if (buffer[0] == '/')
+		status = path_to_vnode(buffer, true, &vnode, NULL, true);
+	else {
+		inc_vnode_ref_count(vnode);
+			// vnode_path_to_vnode() releases a reference to the starting vnode
+		status = vnode_path_to_vnode(vnode, buffer, true, 0, &vnode, NULL, NULL);
+	}
 
 	put_mount(mount);
 
